k8s/clickstream-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickstream-ingress
  namespace: ecommerce-platform
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: clickstream.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: clickstream-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickstream-frontend
                port:
                  number: 80
